[gd_scene load_steps=3 format=3 uid="uid://njnpko3svuim"]

[ext_resource type="Theme" uid="uid://ukoee31quftd" path="res://ui/menus/layouts/tally/tally_menu.tres" id="1_5ptnq"]
[ext_resource type="Script" path="res://ui/menus/layouts/tally/tally_menu.gd" id="1_bxp8o"]

[node name="TallyMenu" type="CanvasLayer"]
script = ExtResource("1_bxp8o")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.5
offset_top = -219.5
offset_right = 225.5
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5ptnq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="EoDTally" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End of day # Tally"
horizontal_alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GainedFame" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GainedFameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GainedFame"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fame Gained:"

[node name="GainedFameAmount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GainedFame"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Fame" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Fame"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Fame:"

[node name="FameAmountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Fame"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Go to next day?"
